Update configuration for hosting